static/css/base.css
/* ... */
/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    
    .header-container {
    padding-top: 130px !important;
    }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 84px !important;
    }

    .pad_cont {
     padding-top: 98px !important;   
    }

    #bag_cont {
    padding-top: 100px !important;
    }

    body {
        height: calc(100vh - 116px);
    }

    #checkout_cont {
        padding-top: 100px !important;
    }
}


@media (max-width: 653px) and (min-width: 280px) {
    #poll_cont {
        padding-top: 82px !important;
    }
}

@media (max-width: 600px) {
    .button_green {
        margin-left: 90px;
    }
}

@media (max-width: 540px){
    #keep_shop_btn {
        padding-top: 50px !important;
    }
}

/* Surface Duo */
@media (max-width: 540px){
    .makeText {
        font-size: 14px !important;
    }
    .button_green{
        margin: auto !important;
        margin-top: 20px !important;
        margin-bottom: 40px !important;
    }
    .homeHeroZimgNew2{
        width: 72%;
        padding-bottom: 20px !important;
    }
   
}

@media (max-width: 516px) {
   #bag_cont {
       padding-top: 130px !important;
   }

   #checkout_cont {
       padding-top: 130px !important;
   }
}

